bizinikiwi/pezframe/support/test/tests/pezpallet_ui/type_value_invalid_item.stderr
error: Invalid pezpallet::type_value, expected item fn
  --> tests/pezpallet_ui/type_value_invalid_item.rs:35:27
   |
35 |     #[pezpallet::type_value] struct Foo;
   |                              ^^^^^^
